--- a/docs/getstarted/app.css
+++ b/docs/getstarted/app.css
@@ -80,6 +80,7 @@ body {
     background-color: #fff;
     border-radius: 2px;
     box-shadow: 0 1px 4.85px .15px rgba(0, 0, 0, .2);
+    margin-top: 0;
 }
 .panel-component__inner {
     display: flex;
